--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>To Do</h1>
         <label for="task">New Task</label> <br>     
         <input type="text" name="task" id="task"><br>
-        <button class="btn" type="submit" id="task-add">Submit</button>
+        <button class="btn" type="submit" id="task-add">Add Task</button>
     </div>
     <div class="task-list">
         <h1>To Do List</h1>
