--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="task-form">
         <h1>To Do</h1>
         <label for="task">New Task</label> <br>     
-        <input type="text" name="task" id="task"><br>
+        <input id="task" type="text" name="task" placeholder="New Task"><br>
         <button class="btn" type="submit" id="task-add">Add Task</button>
     </div>
     <div class="task-list">
         <h1>To Do List</h1>
         <label for="filter">Filter Tasks</label><br>
-        <input type="text" name="filter" id="filter"><br>
+        <input id="filter" type="text" name="filter" placeholder="Filter Tasks"><br>
         
         <div class="container">
             <ul class="collection">
