--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <ul class="collection">
                 <!-- place for new task that shoud look like below -->
-                <li class="collection-tem"> 
+                <li class="collection-item"> 
                     Trening
                     <a class="task-delete" href="http://"><i class="far fa-times-circle"></i></a>
                 </li>
