css to be continued..

--- a/index.html
+++ b/index.html
@@ -60,23 +60,23 @@
                 <div class="container">
                     <ul class="collection">
                         <!-- place for new task that shoud look like below -->
-                        <li class="collection-item">    <span class="title">Training</span>
-                            <span class="till">11.05.2018</span>
+                        <li class="collection-item">    <span class="title">Training</span><br>
+                            <span class="till">11.05.2018</span><br>
                             <span class="remark">going to dance class</span>
                             <a class="task-delete" href="http://"><i class="far fa-times-circle"></i></a>
                             <a class="task-complete" href="http://"><i class="far fa-check-circle"></i></a>
                         </li>
                         <li class="collection-item">
-                                <span class="title">Shoping</span>
-                                <span class="till">18.07.2018</span>
+                                <span class="title">Shoping</span><br>
+                                <span class="till">18.07.2018</span><br>
                                 <span class="remark">get new car</span>
                             <a class="task-delete" href="http://"><i class="far fa-times-circle"></i></a>
                             <a class="task-complete" href="http://"><i class="far fa-check-circle"></i></a>
                         </li>
                         <li class="collection-item">
-                                <span class="title">clearing-up</span>
-                                <span class="till">08.04.2018</span>
-                                <span class="remark">my room!</span>
+                                <span class="title">clearing-up</span><br>
+                                <span class="till">08.04.2018</span><br>
+                                <span class="remark">my room!</span><br>
                             <a class="task-delete" href="http://"><i class="far fa-times-circle"></i></a>
                             <a class="task-complete" href="http://"><i class="far fa-check-circle"></i></a>
                         </li>
