--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <li class="collection-item">
                                 <span class="title">clearing-up</span><br>
                                 <span class="till">08.04.2018</span><br>
-                                <span class="remark">my room!</span><br>
+                                <span class="remark">my room!</span>
                             <a class="task-delete" href="http://"><i class="far fa-times-circle"></i></a>
                             <a class="task-complete" href="http://"><i class="far fa-check-circle"></i></a>
                         </li>
