Zmiana gwiazdek na input

--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
                         <input id="task" type="text" name="task" placeholder="New Task">
                         <div class="task-rating">
                             <label>How important?</label>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star"></span>
+                            <input id="priority" type="number" name="priority" min="1" max="5" placeholder="Priorytet">
                         </div>
                         <label>Till when?</label>
                         <input id="date" type="date" name="date" placeholder="Deadline">
