--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <a class="filter-icon" href=""><span class="fas fa-filter"></span></a>
                         <ul class="filter-list">
                             <li>Filter by:</li>
-                            <li><input type="checkbox" name="rating">Rating</li>
-                            <li><input type="checkbox" name="done">Tasks DONE</li>
-                            <li><input type="checkbox" name="to-do">Tasks TO DO</li>
+                            <li><input type="checkbox" name="rating"> Rating</li>
+                            <li><input type="checkbox" name="done"> Tasks DONE</li>
+                            <li><input type="checkbox" name="to-do"> Tasks TO DO</li>
                         </ul>
                 </div>
                 <br>
@@ -57,34 +57,7 @@
 
                 <div class="container">
                     <ul class="collection" id="task-list">
-                        <!-- place for new task that shoud look like below -->
-                        <li class="collection-item">
-                            <h3 class="title">Training</h3>
-                            <a class="task-delete" href="http://"><i class="far fa-times-circle"></i></a>
-                            <a class="task-complete" href="http://"><i class="far fa-check-circle"></i></a>
-                            <div class="priority">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                            </div>
-                            <span class="till">11.05.2018</span>
-                            <p class="remark">going to dance class</p>
-                        </li>
-                        <li class="collection-item">
-                            <h3 class="title">Shoping</h3>
-                            <a class="task-delete" href="http://"><i class="far fa-times-circle"></i></a>
-                            <a class="task-complete" href="http://"><i class="far fa-check-circle"></i></a>
-                            <div class="priority">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                            </div>
-                            <span class="till">18.07.2018</span><br>
-                            <p class="remark">get new car</p>
-
-                        </li>
+                        <!-- place for new task  -->
                     </ul>
                 </div>
                     <a href="#" class="btn" id="clear">Clear Tasks</a>
