--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h1>To Do List</h1>
                 <label for="filter">Filter Tasks</label><br>
                 <div class="filter-box">
-                    <input id="filter" type="text" name="filter" placeholder="Filter Tasks">
+                    <input id="filter" type="text" name="filter" placeholder="Filter Tasks by Title">
                     <a class="filter-button" href=""><span class="fas fa-filter"></span></a>
                         <ul class="filter-list">
                             <li>Filter by:</li>
