--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <label for="filter">Filter Tasks</label><br>
                 <div class="filter-box">
                     <input id="filter" type="text" name="filter" placeholder="Filter Tasks">
-                    <a class="filter-button" href=""><span class="fas fa-filter"></span></a>
+                    <button class="filter-button"><span class="fas fa-filter"></span></button>
                         <ul class="filter-list">
                             <li>Filter by:</li>
 
