--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
                 <label for="filter">Filter Tasks</label><br>
                 <div class="filter-box">
 
-                    <input class="filter" type="text" name="filter" placeholder="Filter Tasks">
-                    <input class="filter" type="text" name="filter" placeholder="Filter Tasks by Title">
+                    <input id = "filter" class="filter" type="text" name="filter" placeholder="Filter Tasks by Title">
                     <button class="filter-button"><span class="fas fa-filter"></span></button>
 
                         <ul class="filter-list">
