--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star"></span>
                                 </button>
                             </li>
                             <li>
@@ -102,21 +102,12 @@
                         </ul>
                 </div>
                 <br>
-
-
                 <div class="container">
                     <ul class="collection" id="task-list">
-
                         <!-- place for new task  -->
                     </ul>
-
-
-                    </ul>
-
-
                 </div>
                     <a href="#" class="btn" id="clear">Clear Tasks</a>
-
             </div>
     </div>
     <script src="./js/app.js"></script>
